--- a/app/src/main/res/layout/category_dialog.xml
+++ b/app/src/main/res/layout/category_dialog.xml
@@ -9,6 +9,7 @@
         android:id="@+id/etName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapWords"
         android:hint="@string/category" />
 
 </LinearLayout>
