--- a/app/src/main/res/layout/expandable_list_view.xml
+++ b/app/src/main/res/layout/expandable_list_view.xml
@@ -5,4 +5,6 @@
     android:layout_height="match_parent"
     android:choiceMode="singleChoice"
     android:listSelector="@color/list_selector"
-    android:padding="0dp" />
+    android:padding="0dp"
+    android:divider="@color/list_divider"
+    android:dividerHeight="1dp" />
