--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,5 +9,4 @@
     android:elevation="4dp"
     android:background="@color/primary"
     app:theme="@style/AppTheme.Toolbar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    />
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
